...
          }
        }
      }
    }
    .frame(maxWidth: .infinity, maxHeight: .infinity)
    .background(Color("AmbientColor"))
    .accessibilityIdentifier("BookViewLabel")
  }
}

struct BookImageView: View {
  var book: Book
  var body: some View {
...
        .strokeBorder(Color("AmbientColor"), lineWidth: Constants.General.lineWidth)
    )
    .foregroundColor(.black)
    .cornerRadius(Constants.General.buttonCornerRadius)
    .alert("This book is already added.", isPresented: $showingAlert) {
      Button("OK", role: .cancel) { }
        .accessibilityIdentifier("bookRepeatedLabel")
    }
  }
}

struct BookView_Previews: PreviewProvider {
  static var previews: some View {
...
